--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="Yuvaraj is great worker" />
+    <meta name="description" content="Jagadesh is great worker" />
     <title>Jagadesh Personal Site</title>
   </head>
   <link rel="stylesheet" href="style.css" />
